kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: trip-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.bratur.net
      http:
        paths:
          - backend:
              serviceName: trip
              servicePort: 80
            path: /trip
